# ultraScan

./: .gitattributes  .gitignore  M0_capture_report.md  M1_display_report.md  M2a_ddc_report.md  M2b_audio_report.md  M3_gain_report.md  M3b_agc_default_report.md  M4_detect_report.md  M5_record_report.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ultrascan_DESIGN_and_workorder.md
scripts/: m0_stress.py  m1_view.py  m2b_listen.py  m4_detect.py
tests/: conftest.py  test_audifier.py  test_audio_worker.py  test_capture_sources.py  test_detect_pipeline.py  test_detector.py  test_gain.py  test_m0_stress.py  test_m2b_sim_pipeline.py  test_record.py  test_ring_readers.py  test_spec_audio.py  test_spsc.py  test_stft_stream.py
ultrascan/: __init__.py
ultrascan/audio/: __init__.py  output.py  spsc.py  worker.py
ultrascan/capture/: __init__.py  ring_buffer.py  sources.py  stress.py
ultrascan/detect/: __init__.py  detector.py  event_log.py  events.py  worker.py
ultrascan/dsp/: __init__.py  audifier.py  ddc.py  gain.py  spec_audio.py  stft.py
ultrascan/gui/: __init__.py  app.py  band_view.py  event_view.py  pipeline.py
ultrascan/record/: __init__.py  guano_writer.py  recorder.py
